made some minor bug fixes since refactor renaming doesn't work with html string literals (dumb php!)
Also fixed a bug with a placeholder in the icon upload. You should probably check it out since I changed the getEntityHelperName method.

--- a/_output/templates/admin/terrasphere_core_mastery_traits.html
+++ b/_output/templates/admin/terrasphere_core_mastery_traits.html
@@ -35,7 +35,7 @@
 							<xf:foreach loop="$traitType" value="$type">
 								<xf:datarow
 										hash="{$type.id}"
-										href="{{ link('terrasphere-core/masteries/traits/edit', $type, {'traitCategory' : $type.entityHelperName})}}"
+										href="{{ link('terrasphere-core/masteries/traits/edit', $type, {'traitCategory' : $type.entityShortName})}}"
 										label="{$type.name}"
 										hint=""
 										delete="www.google.de"
