--- a/_output/templates/admin/terrasphere_core_mastery_trait_edit.html
+++ b/_output/templates/admin/terrasphere_core_mastery_trait_edit.html
@@ -5,7 +5,7 @@
 </xf:if>
 
 
-<xf:form action="{{ link('terrasphere-core/masteries/traits/dumb', $trait,{'traitCategory' : $trait.entityHelperName}) }}" class="block" ajax="true">
+<xf:form action="{{ link('terrasphere-core/masteries/traits/dumb', $trait,{'traitCategory' : $trait.entityShortName}) }}" class="block" ajax="true">
     <div class="block-container">
         <div class="block-body">
             <xf:foreach loop="$trait.formStructure" key="$structureKey" value="$xfElement">
@@ -20,7 +20,11 @@
 				
 				<xf:if is="{$xfElement.xfComponent}== 'icon_url'">
 					<xf:formrow label="{$xfElement.label}">
-						<div class="inputGroup inputGroup--joined" data-xf-init="asset-upload" data-asset="{{$trait.entityHelperName . '-' . $structureKey . '-' . $trait.getID()}}">
+						<xf:comment>
+							data-asset needs to be changed to something better. That said, it basically takes the image name and data-asset makes a folder under asset with still the same filename, so in this case it would be under
+							data/assets/placeholder/[imagename]
+						</xf:comment>
+						<div class="inputGroup inputGroup--joined" data-xf-init="asset-upload" data-asset="placeholder">
 							<input type="text" class="input js-assetPath " name="icon_url" value="{{$trait.icon_url}}" dir="ltr" id="idkwhythisneedsanid">
 							<label class="inputGroup-text inputUploadButton" data-xf-init="tooltip" data-original-title="Upload file" id="idkwhythisneedsanideither">
 								<input type="file" class="js-uploadAsset" accept=".gif,.jpeg,.jpg,.jpe,.png">
