Added delete option to mastery list(Route doesn't exist yet)

--- a/_output/templates/admin/terrasphere_core_mastery_list.html
+++ b/_output/templates/admin/terrasphere_core_mastery_list.html
@@ -11,12 +11,12 @@
 			<div class="block-body">
 				<xf:datalist>
 					<xf:foreach loop="{$masteryGroup.masteries}" value="$mastery">
-						<xf:datarow>
-							<xf:main hash="{$mastery.mastery_id}"
-									 href="{{ link('terrasphere-core/masteries/edit', $mastery) }}"
-									 label="{$mastery.display_name}">
-							</xf:main>
-						</xf:datarow>
+						<xf:datarow
+								hash="{$mastery.mastery_id}"
+								href="{{ link('terrasphere-core/masteries/edit', $mastery) }}"
+								label="{$mastery.display_name}"
+								delete="todo"
+								/>
 					</xf:foreach>
 				</xf:datalist>
 			</div>
