Started reworking the Ranking and Ranking Schema tables and table init and fill methods.
With this commit things should currently be broken...

--- a/_output/templates/admin/terrasphere_core_rank_schema_edit.html
+++ b/_output/templates/admin/terrasphere_core_rank_schema_edit.html
@@ -25,7 +25,7 @@
                              max="99999" step="1"
                              label="{{ phrase('Cost for S Rank') }}"/>
 
-            <xf:selectrow name="currency_type" value="{$rankSchema.currency_type}" label="{{ phrase('dbtech_credits_currency') }}">
+            <xf:selectrow name="currency_type" value="{$rankSchema.currency_id}" label="{{ phrase('dbtech_credits_currency') }}">
                 <xf:foreach loop="$currencies" value="$currency">
                     <xf:option value="{$currency.currency_id}">{$currency.title}</xf:option>
                 </xf:foreach>
