--- a/_output/templates/admin/terrasphere_core_mastery_trait_type_edit.html
+++ b/_output/templates/admin/terrasphere_core_mastery_trait_type_edit.html
@@ -32,7 +32,7 @@
                     </label>
                 </div>
             </xf:formrow>
-            <xf:numberboxrow name="rank_schema_id" value="{$trait.rank_schema_id}" min="1"
+            <xf:numberboxrow name="cap_per_character" value="{$trait.cap_per_character}" min="1"
                              max="9999" step="1"
                              label="{{ phrase('terrasphere_core_mastery_type_cap') }}"
                              explain="{{ phrase('terrasphere_core_mastery_type_cap_explain') }}"/>
