Added color to masteries, title, and star rank display to mastery shop. Character sheet now links to a post elsewhere on the forums.

--- a/_output/templates/admin/terrasphere_core_mastery_edit.html
+++ b/_output/templates/admin/terrasphere_core_mastery_edit.html
@@ -53,6 +53,9 @@
 					</label>
 				</div>
 			</xf:formrow>
+			
+			<xf:textboxrow name="color" value="{$mastery.color}"
+				label="{{ phrase('color') }}" />
 		</div>
 		<xf:submitrow sticky="true" icon="save" />
 	</div>
