"Character sheet" in member tooltip now just reads "Sheet".

--- a/_output/templates/public/terrasphere_core_generic_macros.html
+++ b/_output/templates/public/terrasphere_core_generic_macros.html
@@ -8,6 +8,6 @@
     		white-space: pre-wrap;
     		margin: 4px auto;
     		padding: 2px 4px 2px 4px;">
-		<span>Character Sheet</span>
+		<span>Sheet</span>
 	</a>
 </xf:macro>
