Added build description to CS. Swapped CS ordering.

--- a/_output/templates/public/terrasphere_core_post_proxy_page.html
+++ b/_output/templates/public/terrasphere_core_post_proxy_page.html
@@ -88,12 +88,10 @@
 	<xf:extension name="after"></xf:extension>
 </xf:macro>
 
-<div class="block" data-type="post" data-href="{{ link('inline-mod') }}">
-	<div class="block-container">
-		<div class="block-body">
-			<xf:macro name="post"
-					arg-post="{$post}"
-					arg-thread="{$thread}"/>
-		</div>
+<div data-type="post" data-href="{{ link('inline-mod') }}">
+	<div class="block-body">
+		<xf:macro name="post"
+				arg-post="{$post}"
+				arg-thread="{$thread}"/>
 	</div>
 </div>
