Started a stat page/hall of fame.

--- a/_output/templates/public/terrasphere_core_generic_macros.html
+++ b/_output/templates/public/terrasphere_core_generic_macros.html
@@ -11,3 +11,16 @@
 		<span>Sheet</span>
 	</a>
 </xf:macro>
+
+<xf:macro name="character_sheet_thread_link"
+		  arg-user="!">
+	<a href="{{ link('members/characterthread', $user, {}) }}"
+	   class="button"
+	   style="
+			width: 90%;
+    		white-space: pre-wrap;
+    		margin: 4px auto;
+    		padding: 2px 4px 2px 4px;">
+		<span>Char Thread</span>
+	</a>
+</xf:macro>
