Equipment schema is now a blanket option instead of using the IDs stored in the database (which there was no method of changing apart from direct database editing)

--- a/_output/templates/admin/terrasphere_core_expertise_list.html
+++ b/_output/templates/admin/terrasphere_core_expertise_list.html
@@ -4,6 +4,8 @@
 	<xf:button href="{{ link('terrasphere-core/expertise/add') }}" icon="add">{{ phrase('add') }}</xf:button>
 </xf:pageaction>
 
+<p>Note: there's an dropdown to set expertise ranking schema under Options > Terrasphere, which handles currency and cost-per-rank.</p>
+
 <div class="block">
 	<div class="block-container">
 		<xf:foreach loop="$expertiseGroups" value="$expertiseGroup">
